Fixed bug, now the buttons on the end page are properly aligned

--- a/Lisa.Kiwi/Lisa.Kiwi.Web/Content/reporter.css
+++ b/Lisa.Kiwi/Lisa.Kiwi.Web/Content/reporter.css
@@ -150,6 +150,11 @@ form .field ul.radioList {
     float: left;
 }
 
+.endButtons {
+    text-align: right;
+    width: 94%;
+}
+
 /*
 	Button lists
 */
